syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.shellshellfish.aaas.datacollect";
option java_outer_classname = "DataCollectProto";
option objc_class_prefix = "DCP";

service DataCollectionService {
    rpc GetFundDataOfDay (DailyFundsQuery) returns (DailyFundsCollection) {
    }
}

message DailyFundsQuery {
  repeated string codes = 1;
  string nav_latest_date = 2;
}

message DailyFundsCollection{
  repeated DailyFunds dailyFunds = 1;
}

message DailyFunds {
  string id = 1;
  string nav_unit = 2;
  string fund_scale = 3;
  string nav_accum = 4;
  string yield_of_7_days = 5;
  string nav_adj = 6;
  string nav_latest_date = 7;
  string code = 8;
  string million_revenue = 9;
  string bm_index_chg_pct = 10;
}